fix(css): toast container z-index

--- a/js/src/scss/_toasts.scss
+++ b/js/src/scss/_toasts.scss
@@ -1,9 +1,10 @@
 @import '../../node_modules/bootstrap/scss/toasts';
 
-.toasts {
+.yonder-toasts {
   position: absolute;
   top: 0;
   right: 0;
   margin-top: 2rem;
   margin-right: 2rem;
+  z-index: $zindex-tooltip;
 }
